# yogapy

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: build-yoga.yml  release.yml  wheels.yml
src/: main.cpp  wrapper.cpp
src/yogapy/: CMakeList.txt  __init__.py  layout.py  yoga_binding.py
