[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.11"]
build-backend = "scikit-build-core.build"

[project]
name = "yogapy"
version = "0.1.0"
description = "Native Python bindings for Facebook Yoga v3.2.1"
readme = "README.md"
authors = [{name = "Your Name"}]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.scikit-build]
cmake.args = ["-DYOGA_SRC_DIR=yoga_src"]
wheel.install-dir = "yogapy"
sdist.include = ["yoga_src/*", "src/*"]