[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.11"]
build-backend = "scikit-build-core.build"

[project]
name = "yogapy"
version = "0.1.0"
description = "Python bindings for the Yoga layout engine"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Your Name"}]

[tool.scikit-build]
# Consolidate all build logic here
cmake.minimum-version = "3.15"
# Ensure the source directory is explicitly passed
cmake.args = ["-DYOGA_SRC_DIR=yoga_src"]
ninja.make-program = "" # Auto-detect best builder
wheel.install-dir = "yogapy"
# Include all necessary files in the source distribution
sdist.include = ["yoga_src/**/*", "src/**/*"]

[tool.cibuildwheel]
# Standardize build environments across all runners
build-verbosity = "1"
test-command = "python -c \"import yogapy; print('Yoga version:', yogapy.__version__)\""